--- a/_posts/2014-08-08-process.md
+++ b/_posts/2014-08-08-process.md
@@ -35,7 +35,7 @@ project, and then track it by [Earned Value](/process/time/spi) data.
 The diagram shows how your informal request is transferred to Deliverables, which you accept at the
 end of the project:
 
-<tikz>
+{% tikz %}
 \begin{tikzpicture}
     [node distance = 2.5cm,
     auto, thick]
@@ -65,7 +65,7 @@ end of the project:
     \path [line] (deliverables) -- node [right] {User Acceptance Testing} (accepted);
 
 \end{tikzpicture}
-</tikz>
+{% endtikz %}
 
 Project [communications](/process/communication) are iterative and customer-focused. They include
 [Daily Reports](/process/communication/dailyreport), [incremental
