--- a/_posts/process/2014-08-08-risk.md
+++ b/_posts/process/2014-08-08-risk.md
@@ -31,7 +31,7 @@ All Risks are identified during the [Inception Phase](/process/time/inception) a
 List](/process/risk/risklist) is developed which includes mitigations and contingencies plans for
 each Risk. Usually, a Risk List identifies up to 20 areas of concern.
 
-<tikz>
+{% tikz %}
 \begin{tikzpicture}
     [node distance = 2.5cm,
     auto, thick]
@@ -52,7 +52,7 @@ each Risk. Usually, a Risk List identifies up to 20 areas of concern.
     \node [right=1cm of group, text width=3cm, inner sep=5mm]
         {This activites are performed first time during Inception Phase, and later on each Iteration};
 \end{tikzpicture}
-    </tikz>
+    {% endtikz %}
 
 You select a strategy for addressing each Risk and the [Scope](/process/scope),
 [Cost](/process/cost), and [Schedule](/process/time/schedule) are adapted according to Risk response plans.
