--- a/_posts/process/2014-08-08-scope.md
+++ b/_posts/process/2014-08-08-scope.md
@@ -48,7 +48,7 @@ Alpha-Specification becomes a Beta-Specification. When the project begins and th
 [Budget](/process/cost/budget) is approved (following a [LCO Milestone](/process/time/lco)), the
 Beta-Specification becomes an effective [Specification](/process/scope/specification).
 
-<tikz>
+{% tikz %}
 \usepgflibrary{shapes.symbols}
 \begin{tikzpicture}
     [node distance = 2.5cm,
@@ -68,7 +68,7 @@ Beta-Specification becomes an effective [Specification](/process/scope/specifica
     \draw [line, triangle 60-triangle 60] (scope.north west) -- (scope.north east);
 
 \end{tikzpicture}
-    </tikz>
+    {% endtikz %}
 
 A fully-dressed Specification is called a [SRS](/process/scope/srs) (Software Requirements
 Specification) and is compliant with 'Recommended Practices for Software Requirements Specifications'.
