--- a/_posts/process/2014-08-08-time.md
+++ b/_posts/process/2014-08-08-time.md
@@ -46,7 +46,7 @@ Specification is ready and a Schedule is defined. The Schedule is a one-page tab
 [Iterations](/process/time/iteration) and Milestones. As soon as the customer signs the Schedule, it
 obtains the status of a contractual provision and can't be missed.
 
-<tikz>
+{% tikz %}
 \begin{tikzpicture}
     [auto, thick]
 
@@ -80,7 +80,7 @@ obtains the status of a contractual provision and can't be missed.
     \draw [-angle 90] (note4) -- (Iteration4.south east);
 
 \end{tikzpicture}
-    </tikz>
+    {% endtikz %}
 
 The objective of each Iteration is to implement, test, and deliver a certain part of the product
 functionality. Iteration normally takes 8-12 working days and starts with a fine-grained Iteration
