--- a/_posts/process/cost/2014-08-08-model.md
+++ b/_posts/process/cost/2014-08-08-model.md
@@ -20,7 +20,7 @@ What is important for the project is to keep total amount of payments received h
 project cost, as total amount of staff-hours paid for task executors. This diagram shows the dynamic
 nature of project payments:
 
-<tikz>
+{% tikz %}
 \begin{tikzpicture}
     \tikzstyle{ln} = [draw=tpcBlack, -triangle 60]
 
@@ -82,7 +82,7 @@ nature of project payments:
         (10.5,6.25)
     } node [anchor=west, text=tpcBlue, fill=white, draw=tpcBlue, thin] {Actual Cost (AC)};
 \end{tikzpicture}
-    </tikz>
+    {% endtikz %}
 
 You will make payments (P, P, P and P) in order to cover actual cost of the project, but strictly
 according to the approved Schedule document with a list of Milestones (M, M, and M)
