--- a/_posts/innovations/2009-02-03-metrics.md
+++ b/_posts/innovations/2009-02-03-metrics.md
@@ -89,7 +89,7 @@ tests is that once the code is tested it stays workable when its author forgets 
 In our management panel you get a graph that indicates current value of the metric and a history of
 change, like you see in the sample below:
 
-<tikz>
+{% tikz %}
 \begin{tikzpicture}[font=\small]
           \draw [very thin, color=tpcGrey] (0,0) grid [step=0.57] (14,8);
         \draw [-triangle 60, semithick, draw=tpcBlack] (0,0) -- coordinate (x axis mid) (14.85,0) node[right] {$t$};
@@ -114,7 +114,7 @@ change, like you see in the sample below:
 \draw [draw=tpcBlack] (0,0.2) -- (0,-0.2) node [below] {02/05/08};
 \draw [draw=tpcBlack] (14,0.2) -- (14,-0.2) node [below] {02/27/09};
 \end{tikzpicture}
-        </tikz>
+        {% endtikz %}
 
 This graph is available for you and your coders. It is instantly updated by our software according
 to the source code from SVN repository.
@@ -126,7 +126,7 @@ There are five components of the whole process: [SVN](http://subversion.tigris.o
 Coders as usualy commit their changes to SVN, and you monitor quality-of-code in our online project
 management system (thePanel):
 
-<tikz>
+{% tikz %}
 \begin{tikzpicture}
     \tikzstyle{ln} = [draw=tpcBlue!50, line width=1mm, -triangle 60, fill=tpcBlue!50]
     \tikzstyle{ln1} = [draw=tpcGreen, line width=0.3mm, -triangle 60, fill=tpcGreen, dashed]
@@ -161,7 +161,7 @@ management system (thePanel):
 
     \path [draw=tpcRed, dashed, very thick] ([yshift=-2mm]svn.south west) -- ([yshift=-2mm]panel.south east);
 \end{tikzpicture}
-        </tikz>
+        {% endtikz %}
 
 The cycle is repeated every day and is initiated by Continuum, an open-source continuous integration
 software by [Apache Group](http://www.apache.org):
