--- a/_posts/about/2014-08-08-sitemap.md
+++ b/_posts/about/2014-08-08-sitemap.md
@@ -13,3 +13,5 @@ next_step: about/news
 
 This site is constantly changing and updating. Bookmark it for your convenience. Find your desired
 point in the following site map:
+
+{% sitemap %}
