latex polished and fixed

--- a/_posts/about/news/year2007/2007-06-07-news5.md
+++ b/_posts/about/news/year2007/2007-06-07-news5.md
@@ -5,7 +5,7 @@ permalink: about/news/year2007/news5
 tags: news
 title: "Technopark Corp. Introduces German Version Of Corporate Web Site"
 description: |
-  A German version of TechnoPark Corp.'s web \site is now
+  A German version of TechnoPark Corp.'s web site is now
   available at technoparkcorp.de. The new website is targeted
   at German and German speaking businesses in sestern Europe.
 keywords:
