--- a/_posts/stories/2014-08-08-phprack.md
+++ b/_posts/stories/2014-08-08-phprack.md
@@ -13,21 +13,22 @@ keywords:
 ---
 
 <a href="http://www.phprack.com">
-        <img src="data:image/png;base64,${base64:/stories/phprack-logo.png}" alt="phpRack" style="float:right; "/>
-    </a>
+  <img src="//img.technoparkcorp.com/stories/phprack-logo.png"
+  alt="phpRack" style="float:right; width:228px; height:60px;"/>
+</a>
 
-The design and development of took almost 3 months for a team of 5 people, working in parallel and 
-absolutely distributed (they never met each other face-to-face and never communicated online). There 
-were engineers from Poland, Belarus, Czech Republic, and United States. The team communicated only 
+The design and development of took almost 3 months for a team of 5 people, working in parallel and
+absolutely distributed (they never met each other face-to-face and never communicated online). There
+were engineers from Poland, Belarus, Czech Republic, and United States. The team communicated only
 through Trac and Subversion, using [FaZend.com](http://www.fazend.com) Continuous Integration platform.
 
-The product is developed in PHP, with an extensive use of XML and JavaScript. We've used a number of 
+The product is developed in PHP, with an extensive use of XML and JavaScript. We've used a number of
 frameworks and third-party tools, like PHPUnit, jQuery, JSLint, QUnit, Phing.
 
-The biggest challenge in the project was a necessity to invent the product, design it and develop at 
-the same time. There were a number of risks related to this challenge. What helped us to mitigate 
-the majority of risks is a [Puzzle Driven Development](/innovations/pdd) concept, which was invented 
-during that time and applied for USPTO patent. The project helped us to invent the PDD concept and 
+The biggest challenge in the project was a necessity to invent the product, design it and develop at
+the same time. There were a number of risks related to this challenge. What helped us to mitigate
+the majority of risks is a [Puzzle Driven Development](/innovations/pdd) concept, which was invented
+during that time and applied for USPTO patent. The project helped us to invent the PDD concept and
 to prove its effectiveness in a distributed team doing parallel programming.
 
 Read more at .
