--- a/_posts/innovations/2009-02-03-metrics.md
+++ b/_posts/innovations/2009-02-03-metrics.md
@@ -32,24 +32,22 @@ not for the team itself. Being a customer in such a project, how do you monitor 
 without programming skills? If the answer is "I trust my programmers" you may suffer from some of
 the following problems:
 
-<ol>
-        <li>You are afraid to change key programmers since each of
-        them possesses some unique knowledge about your product;</li>
+  1. You are afraid to change key programmers since each of
+  them possesses some unique knowledge about your product;
 
-        <li>You can only hope that your code is of good [quality](http://en.wikipedia.org/wiki/Software_quality) because
-        your coders say it is;</li>
+  2. You can only hope that your code is of good [quality](http://en.wikipedia.org/wiki/Software_quality) because
+  your coders say it is;
 
-        <li>You can't add new features freely since the product becomes unstable after every new change;</li>
+  3. You can't add new features freely since the product becomes unstable after every new change;
 
-        <li>You feel that if you want to get higher quality-of-code you have to change programmers.</li>
-    </ol>
+  4. You feel that if you want to get higher quality-of-code you have to change programmers.
 
 These problems occur in many projects where the quality-of-code is not controlled and is not
 managed. A common assumption is that good programmers produce good code and if you want to improve
 the code you should hire better programmers. This assumption is wrong. Quality-of-code in your
 product has to be controlled by you and now we will show you how to accomplish this.
 
-<h2>What are your objectives?</h2>
+## What are your objectives?
 
 Programmers (coders, testers, analysts) are technical specialists whose motivation is based on .
 Either you recognize them as "gurus" or their colleagues give them respect for their knowledge or
@@ -67,23 +65,24 @@ you, not to the people who know the tricks.
 As you see, your objectives and your coders' objectives are not aligned, in other words you work
 against each other.
 
-<h2>Quality-of-code could be measured</h2>
+## Quality-of-code could be measured
 
 To align objectives and start sharing common goals, it is necessary to invent a that will represent
 your objective and at the same time will impact the programmers' motivation. The higher the metric,
 the better the quality-of-code will be. At the same time, the benefits for programmers will be
 higher, like salary and recognition.
 
-We use two metrics: [Code Coverage](http://en.wikipedia.org/wiki/Code_coverage) and [Cyclomatic
-Complexity](http://en.wikipedia.org/wiki/Cyclomatic_complexity). Each of them are calculated
+We use two metrics: [Code Coverage](http://en.wikipedia.org/wiki/Code_coverage) and
+[Cyclomatic Complexity](http://en.wikipedia.org/wiki/Cyclomatic_complexity). Each of them are calculated
 automatically at each round of [continuous integration](http://en.wikipedia.org/wiki/Continuous_Integration).
 
 tells you that the code is clear and simple and could be easily understood by new programmers (This
-means no more "tricks"). Cyclomatic complexity is one of the most important [software
-metrics](http://en.wikipedia.org/wiki/Software_metric) used in [static code analysis](http://en.wikipedia.org/wiki/Static_code_analysis).
+means no more "tricks"). Cyclomatic complexity is one of the most important
+[software metrics](http://en.wikipedia.org/wiki/Software_metric)
+used in [static code analysis](http://en.wikipedia.org/wiki/Static_code_analysis).
 
-tells you that for each block of code there exists a [unit
-test](http://en.wikipedia.org/wiki/Unit_testing) that validates it. The biggest benefit of unit
+tells you that for each block of code there exists a
+[unit test](http://en.wikipedia.org/wiki/Unit_testing) that validates it. The biggest benefit of unit
 tests is that once the code is tested it stays workable when its author forgets how it works.
 
 In our management panel you get a graph that indicates current value of the metric and a history of
@@ -91,35 +90,35 @@ change, like you see in the sample below:
 
 {% tikz %}
 \begin{tikzpicture}[font=\small]
-          \draw [very thin, color=tpcGrey] (0,0) grid [step=0.57] (14,8);
-        \draw [-triangle 60, semithick, draw=tpcBlack] (0,0) -- coordinate (x axis mid) (14.85,0) node[right] {$t$};
-        \draw [-triangle 60, semithick, draw=tpcBlack] (0,0) -- coordinate (y axis mid) (0,8.4) node[above] {Code Coverage};
-        \draw [*-*, draw=tpcBlue, very thick, smooth, tension=0.2] plot coordinates {
-    (0, 0.00)
-    (1, 1.0)
-    (2, 3.93)
-    (3, 5.29)
-    (4, 3.97)
-    (5, 4.77)
-     (6, 6.37)
-     (7, 6.40)
-     (8, 6.40)
-     (9, 8.00)
-     (10, 8.00)
-    (11, 6.64)
-    (12.39, 6.53)};
+\draw [very thin, color=tpcGrey] (0,0) grid [step=0.57] (14,8);
+\draw [-triangle 60, semithick, draw=tpcBlack] (0,0) -- coordinate (x axis mid) (14.85,0) node[right] {$t$};
+\draw [-triangle 60, semithick, draw=tpcBlack] (0,0) -- coordinate (y axis mid) (0,8.4) node[above] {Code Coverage};
+\draw [*-*, draw=tpcBlue, very thick, smooth, tension=0.2] plot coordinates {
+(0, 0.00)
+(1, 1.0)
+(2, 3.93)
+(3, 5.29)
+(4, 3.97)
+(5, 4.77)
+(6, 6.37)
+(7, 6.40)
+(8, 6.40)
+(9, 8.00)
+(10, 8.00)
+(11, 6.64)
+(12.39, 6.53)};
 \draw [draw=tpcRed] (12.39,8) -- (12.39,0) node [below] {today};
 \draw [draw=tpcBlack] (0.2,8) -- (-0.2,8) node [left] {78\%};
 \draw [draw=tpcBlack] (0.2,0) -- (-0.2,0) node [left] {0\%};
 \draw [draw=tpcBlack] (0,0.2) -- (0,-0.2) node [below] {02/05/08};
 \draw [draw=tpcBlack] (14,0.2) -- (14,-0.2) node [below] {02/27/09};
 \end{tikzpicture}
-        {% endtikz %}
+{% endtikz %}
 
 This graph is available for you and your coders. It is instantly updated by our software according
 to the source code from SVN repository.
 
-<h2>How we do this technically</h2>
+## How we do this technically
 
 There are five components of the whole process: [SVN](http://subversion.tigris.org),
 [Continuum](http://continuum.apache.org), [Maven2](http://maven.apache.org), Gist and thePanel.
@@ -128,63 +127,57 @@ management system (thePanel):
 
 {% tikz %}
 \begin{tikzpicture}
-    \tikzstyle{ln} = [draw=tpcBlue!50, line width=1mm, -triangle 60, fill=tpcBlue!50]
-    \tikzstyle{ln1} = [draw=tpcGreen, line width=0.3mm, -triangle 60, fill=tpcGreen, dashed]
-    \tikzstyle{ln2} = [draw=tpcBlue!50, very thick, -angle 60, fill=tpcBlue!50, dashed]
-    \tikzstyle{lbl} = [font=\small, fill=white, inner sep=0.5mm]
+\tikzstyle{ln} = [draw=tpcBlue!50, line width=1mm, -triangle 60, fill=tpcBlue!50]
+\tikzstyle{ln1} = [draw=tpcGreen, line width=0.3mm, -triangle 60, fill=tpcGreen, dashed]
+\tikzstyle{ln2} = [draw=tpcBlue!50, very thick, -angle 60, fill=tpcBlue!50, dashed]
+\tikzstyle{lbl} = [font=\small, fill=white, inner sep=0.5mm]
 
-    \node [inner sep=10mm] (center) {};
-    \node [storage, below=0mm of center, text width=20mm] (ci) {Continuum};
-    \node [block, left=30mm of center, text width=1cm] (svn) {SVN};
-    \node [block, right=30mm of center, text width=15mm] (panel) {thePanel};
-    \node [block, below left=30mm of center, text width=15mm] (maven) {Maven2};
-    \node [block, below=30mm of center, text width=15mm] (metrics) {metrics};
-    \node [block, below right=30mm of center, text width=10mm] (gist) {Gist};
+\node [inner sep=10mm] (center) {};
+\node [storage, below=0mm of center, text width=20mm] (ci) {Continuum};
+\node [block, left=30mm of center, text width=1cm] (svn) {SVN};
+\node [block, right=30mm of center, text width=15mm] (panel) {thePanel};
+\node [block, below left=30mm of center, text width=15mm] (maven) {Maven2};
+\node [block, below=30mm of center, text width=15mm] (metrics) {metrics};
+\node [block, below right=30mm of center, text width=10mm] (gist) {Gist};
 
-    \node [above=30mm of svn, font=\bfseries] (coder) {Coders};
-    \node [above=30mm of panel, font=\bfseries] (you) {You};
-    \node [block, above left=30mm of panel, text width=20mm] (bp) {bonuses};
+\node [above=30mm of svn, font=\bfseries] (coder) {Coders};
+\node [above=30mm of panel, font=\bfseries] (you) {You};
+\node [block, above left=30mm of panel, text width=20mm] (bp) {bonuses};
 
-    \draw [ln] (coder) -- node [lbl] {commit} (svn);
-    \draw [ln] (svn) -- node [lbl] {check out} (maven);
-    \draw [ln] (maven) -- (metrics);
-    \draw [ln] (metrics) -- (gist);
-    \draw [ln] (gist) -- node [lbl] {xml} (panel);
-    \draw [ln] (panel) -- node [lbl] {weekly} (bp);
+\draw [ln] (coder) -- node [lbl] {commit} (svn);
+\draw [ln] (svn) -- node [lbl] {check out} (maven);
+\draw [ln] (maven) -- (metrics);
+\draw [ln] (metrics) -- (gist);
+\draw [ln] (gist) -- node [lbl] {xml} (panel);
+\draw [ln] (panel) -- node [lbl] {weekly} (bp);
 
-    \draw [ln1] (coder) -- (bp);
-    \draw [ln1] (you) -- (panel);
+\draw [ln1] (coder) -- (bp);
+\draw [ln1] (you) -- (panel);
 
-    \draw [ln2] (ci) -- (maven);
-    \draw [ln2] (ci) -- (metrics);
-    \draw [ln2] (ci) -- (gist);
+\draw [ln2] (ci) -- (maven);
+\draw [ln2] (ci) -- (metrics);
+\draw [ln2] (ci) -- (gist);
 
-    \path [draw=tpcRed, dashed, very thick] ([yshift=-2mm]svn.south west) -- ([yshift=-2mm]panel.south east);
+\path [draw=tpcRed, dashed, very thick] ([yshift=-2mm]svn.south west) -- ([yshift=-2mm]panel.south east);
 \end{tikzpicture}
-        {% endtikz %}
+{% endtikz %}
 
 The cycle is repeated every day and is initiated by Continuum, an open-source continuous integration
 software by [Apache Group](http://www.apache.org):
 
-<ol>
-            <li>Coders commit changes to the SVN repository</li>
-            <li>Continuum checks out the changes and starts the builder (Maven2)</li>
-            <li>Maven2 compiles the code and runs unit tests</li>
-            <li>[JUnit](http://www.junit.org)-like framework produces a code coverage report</li>
-            <li>A language-specific tool calculates cyclomatic complexity</li>
-            <li>The transmitter (Gist) sends [XML](http://www.w3.org/XML) report to thePanel</li>
-            <li>thePanel converts metrics into <b>bonuses</b>, for coders</li>
-            <li>You get the quality-of-code instantly</li>
-        </ol>
+1. Coders commit changes to the SVN repository
+1. Continuum checks out the changes and starts the builder (Maven2)
+1. Maven2 compiles the code and runs unit tests
+1. [JUnit](http://www.junit.org)-like framework produces a code coverage report
+1. A language-specific tool calculates cyclomatic complexity
+1. The transmitter (Gist) sends [XML](http://www.w3.org/XML) report to thePanel
+1. thePanel converts metrics into <b>bonuses</b>, for coders
+1. You get the quality-of-code instantly
 
 This process is absolutely transparent for you and the coders. Everything below the dotted red line
 in the diagram above is not visible to anyone. Coders commit changes to SVN together with unit tests
 and get feedback in form of bonuses. You monitor the values of metrics.
 
-We use our own simple cyclomatic complexity calculator based on [Thomas
-McCabe's](http://www.mccabe.com) principles. Code coverage is calculated by
-[JUnit](http://www.junit.org), [xdebug](http://www.phpunit.de">phpUnit
-
-<a href="http://www.xdebug.org)),             [NUnit](http://www.nunit.org) or             [CPPUnit](http://cppunit.sourceforge.net)."/>
-
-(in combination with
+We use our own simple cyclomatic complexity calculator based on
+[Thomas McCabe's](http://www.mccabe.com) principles. Code coverage is calculated by
+[JUnit](http://www.junit.org), [xdebug](http://www.xdebug.org).
