--- a/_posts/stories/2014-08-08-mastor.md
+++ b/_posts/stories/2014-08-08-mastor.md
@@ -21,30 +21,32 @@ keywords:
   - software development
 ---
 
-The objectives of this Project were to develop the company's 
-    corporate system with file storage, data analysis and visualization, 
-    news RSS import, email feedback and a 3rd party PHPBB forum. 
-    The project cost was 1302 s/h, the schedule -- 5 months. 
+The objectives of this Project were to develop the company's
+corporate system with file storage, data analysis and visualization,
+news RSS import, email feedback and a 3rd party PHPBB forum.
+The project cost was 1302 s/h, the schedule -- 5 months.
 
-    We chose an SVN system to store the company's data and PHP to 
-    implement the connection to this storage. Lessons learned from 
-    previous projects contained information about issues of open source 
-    SVN software. It was decided to plan on more testing of this 
-    feature. So we planned to find and fix double the amount 
-    of defects instead of the usual estimated number. 
+We chose an SVN system to store the company's data and PHP to
+implement the connection to this storage. Lessons learned from
+previous projects contained information about issues of open source
+SVN software. It was decided to plan on more testing of this
+feature. So we planned to find and fix double the amount
+of defects instead of the usual estimated number.
 
+{% tikz %}
 \begin{tikzpicture}
-    \node [storage] (php) at (2,5) {PHP5 engine};
-    \node [storage] (svn) at (8,5) {SVN storage};
-    \path [line, triangle 60-triangle 60] (svn) -- node[above, text width=2cm, text centered] {connection protocol} (php);
+\node [storage] (php) at (2,5) {PHP5 engine};
+\node [storage] (svn) at (8,5) {SVN storage};
+\path [line, triangle 60-triangle 60] (svn) -- node[above, text width=2cm, text centered] {connection protocol} (php);
 
-    \draw [-angle 60, draw=tpcBlue, ultra thick] (php.north west) 
-        .. controls +(-3,+2) and +(-3,-2) .. node [left] {unit testing} (php.south west); 
+\draw [-angle 60, draw=tpcBlue, ultra thick] (php.north west)
+    .. controls +(-3,+2) and +(-3,-2) .. node [left] {unit testing} (php.south west);
 
-    \draw [-angle 60, draw=tpcBlue, ultra thick] (php.north) 
-        .. controls +(+12,+3) and +(+12,-3) .. node [pos=0.8, below] {auto testing} (php.south); 
+\draw [-angle 60, draw=tpcBlue, ultra thick] (php.north)
+    .. controls +(+12,+3) and +(+12,-3) .. node [pos=0.8, below] {auto testing} (php.south);
 \end{tikzpicture}
+{% endtikz %}
 
-    This plan was correct and when the 100th bug was fixed, the 
-    system gained an acceptable quality level. Quantitative quality control 
-    is a powerful tool to manage a project's quality.
+This plan was correct and when the 100th bug was fixed, the
+system gained an acceptable quality level. Quantitative quality control
+is a powerful tool to manage a project's quality.
