--- a/_posts/about/news/year2007/2007-06-07-news5.md
+++ b/_posts/about/news/year2007/2007-06-07-news5.md
@@ -29,16 +29,17 @@ home in the Ukraine.
 
 TechnoPark has isolated three practical reasons why western European businesses choose the firm for nearshoring:
 
-<ol><li><strong>Cultural proximity.</strong> Ukraine's religious and mental
- ties to western Europe are historical.</li>
-<li><strong>Time-zone proximity.</strong> There is only a one hour difference
- between timezones in the Ukraine and Germany. The difference is the same with
-  most western European locations.</li>
-<li><strong>Geographical proximity.</strong> Ukraine is a maximum three hour flight
- from any European country, and there are direct flights from most countries. </li></ol>
+ * **Cultural proximity**. Ukraine's religious and mental
+   ties to western Europe are historical.
+ * **Time-zone proximity**. There is only a one hour difference
+   between timezones in the Ukraine and Germany. The difference is the same with
+   most western European locations.
+ * **Geographical proximity**. Ukraine is a maximum three hour flight
+   from any European country, and there are direct flights from most countries.
 
 "We chose to start a German division because we have already had successful experiences implementing
 projects for German clients," explains Egor Bougaenko, CEO of TechnoPark Corp. "We feel that Germany
 is a good market, so we want to address German businesses in their language."
 
-For more information on the German division of TechnoPark Corp. visit .
+For more information on the German division of TechnoPark Corp. visit
+[www.technoparkcorp.com](/).
