--- a/_posts/about/news/year2009/2009-02-12-metrics.md
+++ b/_posts/about/news/year2009/2009-02-12-metrics.md
@@ -27,12 +27,10 @@ since the customer is far away.
 As a result, quality-of-code is out of the customer's control. There are four severe symptoms of
 such a situation:
 
-<ol>
-        <li>You are afraid to change key programmers since each of them possesses some unique knowledge about your product;</li>
-        <li>You can only hope that your code is of good quality because your coders say it is;</li>
-        <li>You can't add new features freely since the product becomes unstable after every new change;</li>
-        <li>You feel that if you want to get higher quality-of-code you have to change programmers.</li>
-    </ol>
+ * You are afraid to change key programmers since each of them possesses some unique knowledge about your product;
+ * You can only hope that your code is of good quality because your coders say it is;
+ * You can't add new features freely since the product becomes unstable after every new change;
+ * You feel that if you want to get higher quality-of-code you have to change programmers.
 
 TechnoPark Corp. has developed a solution that returns control over quality-of-code to the
 customer's hands. Special software built into a continuous integration cycle collects the two
@@ -40,8 +38,8 @@ most-valuable source code metrics (Code Coverage and Cyclomatic Complexity) and 
 values into bonuses for programmers. By doing this regularly and automatically, the customer and the
 project team get a unique level of control over quality-of-code.
 
-More details about the method are available on the TechnoPark Corp website at [ht
-tp://www.technoparkcorp.com/innovations/metrics](http://www.technoparkcorp.com/innovations/metrics).
+More details about the method are available on the TechnoPark Corp website at
+[www.technoparkcorp.com](http://www.technoparkcorp.com/innovations/metrics).
 The method can be implemented in new projects managed by TechnoPark Corp and in currently running
 projects where TechnoPark Corp might play a role as the project management contractor.
 
