--- a/_posts/process/2014-08-08-cost.md
+++ b/_posts/process/2014-08-08-cost.md
@@ -40,16 +40,15 @@ multiple of staff-hours and [price per hour](/process/cost/prices).
 
 Cost is estimated in two steps:
 
-<ol>
-        <li>[ROM Estimate](/process/cost/rom) and Retainer</li>
-        <li>Budget</li>
-    </ol>
+ * [ROM Estimate](/process/cost/rom) and Retainer
+ * Budget
 
 The ROM Estimate is provided to you in response to your informal request and is based on the
 [Vision](/process/scope/vision) document. ROM Estimate gives a range (low and high boundary) of the
 expected Budget. You approve the range and the project team performs
-[requirements](/process/scope/requirement) gathering and analysis during the [Inception
-Phase](/process/scope/inception). These steps result in the creation of a [SRS](/process/scope/srs) document.
+[requirements](/process/scope/requirement) gathering and analysis during the
+[Inception Phase](/process/scope/inception).
+These steps result in the creation of a [SRS](/process/scope/srs) document.
 
 When the SRS is ready and you approved it, the project team estimates project Budget as an exact
 amount of staff-hours. The Budget can only be within the range provided in ROM Estimate. Upon your
