--- a/_posts/process/risk/2014-08-08-risk.md
+++ b/_posts/process/risk/2014-08-08-risk.md
@@ -41,10 +41,7 @@ Risks are found and identified by the project team, project manager and you duri
 lifecycle. Risk management is an iterative process. The sooner a Risk is identified, the faster it
 can be managed and mitigated.
 
-Major Risk identification activities are performed during the [Inception
-Phase](/process/time/inception). [Risk Strategies](/process/risk/strategy) and Risk response plans
-are baselined on a [Risk List](/process/time/lco}">LCO Milestone
-
-<a href="${url:process/risk/risklist)."/>
-
-in the
+Major Risk identification activities are performed during the
+[Inception Phase](/process/time/inception).
+[Risk Strategies](/process/risk/strategy) and Risk response plans
+are baselined on a [LCO Milestone](/process/time/lco).
