--- a/_posts/process/risk/2014-08-08-risklist.md
+++ b/_posts/process/risk/2014-08-08-risklist.md
@@ -33,27 +33,27 @@ You are responsible for choosing which Risk Strategy you wish to implement for e
 following is an example of a Risk List:
 
 <table>
-    <tr>
-        <th>Risk ID and Description</th>
-        <th>Mitigation Plan</th>
-        <th>Contingency Plan</th>
-    </tr>
+  <tr>
+    <th>Risk ID and Description</th>
+    <th>Mitigation Plan</th>
+    <th>Contingency Plan</th>
+  </tr>
 
-    <tr>
-    <td>RISK1, Data provider changes the API on its own schedule, without prior
-    notification. The next change may happen before the project
-    release Milestone, and the system won't work.</td>
-    <td>Develop a configurable XML-based integration module that will
-    allow dynamic API changes without code re-factoring (240 staff-hours)</td>
-    <td>Integration module re-factoring  (180+ staff-hours, 10+ days)</td>
-    </tr>
+  <tr>
+  <td>RISK1, Data provider changes the API on its own schedule, without prior
+  notification. The next change may happen before the project
+  release Milestone, and the system won't work.</td>
+  <td>Develop a configurable XML-based integration module that will
+  allow dynamic API changes without code re-factoring (240 staff-hours)</td>
+  <td>Integration module re-factoring  (180+ staff-hours, 10+ days)</td>
+  </tr>
 
-    <tr>
-    <td>RISK2, Video compressing module is open-source software and doesn't have any guarantees or support.
-    Defects may be revealed in the module.</td>
-    <td>Perform module testing (70 staff-hours) and re-identify Risks</td>
-    <td>Defect removal in the module (220+ staff-hours)</td>
-    </tr>
+  <tr>
+  <td>RISK2, Video compressing module is open-source software and doesn't have any guarantees or support.
+  Defects may be revealed in the module.</td>
+  <td>Perform module testing (70 staff-hours) and re-identify Risks</td>
+  <td>Defect removal in the module (220+ staff-hours)</td>
+  </tr>
 </table>
 
 The Mitigation plan is what actions will be taken in advance to remove Risk responsibility from you.
@@ -63,30 +63,27 @@ When a Risk List is presented, you select a Risk Strategy for each item listed. 
 accept the Risk, or select to implement the Mitigation Plan. For example:
 
 <table>
-    <tr>
-        <th>Risk ID</th>
-        <th>Rank</th>
-        <th>Strategy</th>
-    </tr>
+  <tr>
+    <th>Risk ID</th>
+    <th>Rank</th>
+    <th>Strategy</th>
+  </tr>
 
-    <tr>
-    <td>RISK1</td>
-    <td>Mitigate</td>
-    <td>Extend budget for 240 staff-hours and develop a configurable
-    XML-based integration module that will
-    allow dynamic API changes without code-refactoring</td></tr>
+  <tr>
+  <td>RISK1</td>
+  <td>Mitigate</td>
+  <td>Extend budget for 240 staff-hours and develop a configurable
+  XML-based integration module that will
+  allow dynamic API changes without code-refactoring</td></tr>
 
-    <tr>
-    <td>RISK2</td>
-    <td>Accept</td>
-    <td>Do nothing, but if defects are revealed, the budget will be extended for
-    220 staff-hours in order to remove the defect.  If this does not help, the budget will be extended
-    for 500+ staff-hours for the development of a custom video compressing module</td></tr>
+  <tr>
+  <td>RISK2</td>
+  <td>Accept</td>
+  <td>Do nothing, but if defects are revealed, the budget will be extended for
+  220 staff-hours in order to remove the defect.  If this does not help, the budget will be extended
+  for 500+ staff-hours for the development of a custom video compressing module</td></tr>
 </table>
 
 If you accept the Risk, it means that you agree to take full responsibility for it. If the Risk
-happens, the Contingency Plan will be implemented, resulting in an extension of the project [Specification](/process/time/schedule}">Schedule
-
-<a href="${url:process/scope/specification),     and [Budget](/process/cost/budget).     In the example above, the customer has chosen to accept RISK2.  As a result, the customer may have to pay     for an additional 220 hours in the event that the Risk takes place, as detailed in the Contingency Plan.     "/>
-
-,
+happens, the Contingency Plan will be implemented, resulting in an extension
+of the project [Schedule](/process/time/schedule).
