--- a/_posts/process/2014-08-08-warranty.md
+++ b/_posts/process/2014-08-08-warranty.md
@@ -19,8 +19,20 @@ next_step: process/cost
 ---
 
 As stated in our software development contract, a software project is closed when
-[Quality](/process/quality) is acceptable. That means that 95% of functional [SRS](/process/scope/requirement}">Requirements
+[Quality](/process/quality) is acceptable. That means that 95% of functional
+[Requirements](/process/scope/requirement)
+from [SRS](/process/scope/srs) do not
+have any [Defects](/process/quality/defect).
 
-<a href="${url:process/scope/srs) do not     have any [Defects](/process/quality/defect)."/>
+Since 100% Quality is not attainable, [Deliverables](/process/warranty/deliverables) have many more
+Defects than you or our testers can reveal in a limited amount of [time](/process/time). Project
+acceptance criteria is a situation when Deliverables do not have critical Defects that
+block product release.
 
-from
+We provide defect removal service free of charge during one calendar year
+after project completion. Such service includes removal of any Defects you find
+in Deliverables.
+
+There is a difference between Defect removal and [support services](/process/warranty/support).
+We do not provide [support services](/process/warranty/support), which include
+server administration, end-user support, search engine optimization, etc.
