--- a/_posts/process/quality/2014-08-08-coq.md
+++ b/_posts/process/quality/2014-08-08-coq.md
@@ -35,3 +35,20 @@ reside in software itself. This is where Defects normally lie (in order of sever
  * Design
  * Software code
  * Test Plan
+
+Software code itself is one of the least critical components in the total Cost Of Quality
+structure. Defects in software code are the least expensive to remove.
+
+There are a number of prevention methods we use in order to reveal and remove Defects before they
+become critical or fatal.
+
+  * [Peer reviews](/process/quality/peerreview) of SRS, Schedule, Risk List and architecture
+  * Prototyping on early Iterations
+  * Strict guidelines and manuals for analysts and architects
+  * Industry standards and formats (UML, IEEE, ISO, RUP, XML, etc.)
+  * Periodical Quality Assurance (QA) audits
+
+All prevention methods are used before [unit-testing](/process/quality/unit),
+[system testing](/process/quality/system) and
+[manual testing](/process/quality/manual).
+Prevention methods are performed by programmers and testers when software is being implemented.
