--- a/_posts/process/risk/2014-08-08-strategy.md
+++ b/_posts/process/risk/2014-08-08-strategy.md
@@ -12,8 +12,58 @@ keywords:
 next_step: process/risk/risk
 ---
 
-[Risk List](/process/risk/risk}">Risks
+[Risks](/process/risk/risk)
+are defined in a [Risk List](/process/risk/risklist)
+during the [Inception Phase](/process/time/inception)
+and are presented to you prior to the [LCO Milestone](/process/time/lco).
+You have to choose a strategy for each Risk that appears on the list.
 
-<a href="${url:process/risk/risklist)     during the [Inception Phase](/process/time/inception)     and are presented to you prior to the [LCO Milestone](/process/time/lco).     You have to choose a strategy for each Risk that appears on the list."/>
+You have two options &mdash; either to pay for the implementation of a pro-active Mitigation Plan and eliminate the Risk, or
+to do nothing, but agree that if the Risk happens, you will assume responsibility later by paying for Contingency Plan.</p>
 
-are defined in a
+This following is an example of a possible Risk:
+
+<table>
+<tr>
+    <th>Risk description</th>
+    <th>Mitigation Plan</th>
+    <th>Contingency Plan</th>
+</tr>
+
+<tr>
+<td>Data provider changes the API on its own schedule, without prior
+notification. The next change may happen before the project
+release Milestone, and the system won't work</td>
+<td>Develop a configurable XML-based integration module that will
+allow dynamic API changes without code re-factoring</td>
+<td>Integration module re-factoring</td>
+</tr>
+</table>
+
+<p>The numbers for these different plans include:</p>
+
+<table>
+<tr>
+    <th>Plan</th>
+    <th>Cost, staff-hours</th>
+    <th>Duration, business days</th>
+</tr>
+
+<tr><td>Mitigation Plan</td><td>140</td><td>7</td></tr>
+<tr><td>Contingency Plan</td><td>280+</td><td>10+</td></tr>
+</table>
+
+All of these numbers are provided to you prior to the commencement of the project.
+Thus, there is a choice of spending 140 staff-hours immediately to remove the Risk,
+or to do nothing, with the understanding the 280 or more hours may be required later
+at your expense.
+
+The first option is called *mitigation* and means that you are ready to
+spend time and money pro-actively in order to guarantee that the Risk will be removed.
+
+The second option is called *acceptance*, and means that you do not take any action,
+but is ready to pay later if the Risk does in fact happen. If the Risk never happens, you
+will never pay for it.
+
+If the Risk is not identified and is not listed in Risk List, the
+Risk is already mitigated, and bears no responsibility for you.
