--- a/_posts/process/scope/2014-08-08-matrix.md
+++ b/_posts/process/scope/2014-08-08-matrix.md
@@ -34,8 +34,6 @@ benefits to the project:
  * Ability to backtrack and look at features or business needs
  * Status reporting and analysis
 
-The Traceability Matrix is a very powerful instrument of [time](/process/time), [scope management](/process/cost}">cost
-
-<a href="${url:process/scope)."/>
-
-and
+The Traceability Matrix is a very powerful instrument of [time](/process/time),
+[cost](/process/cost)
+and [scope management](/process/scope).
