--- a/_posts/process/time/2014-08-08-lco.md
+++ b/_posts/process/time/2014-08-08-lco.md
@@ -25,8 +25,16 @@ next_step: process/time/schedule
 ---
 
 The Lifecycle Objectives (LCO) Milestone is a moment when the
-[Specification](/process/scope/specification), [Schedule](/process/cost/budget}">Budget,
+[Specification](/process/scope/specification),
+[Budget,](/process/cost/budget)
+and the [Schedule](/process/time/schedule) are ready
+and presented to you for approval.
 
-<a href="${url:process/time/schedule) are ready     and presented to you for approval."/>
+At this point, you examine the Lifecycle Objectives of the project, and decide either
+to proceed or to cancel it.
 
-and the
+If the project is approved at this moment, we continue to work.
+
+If project is not approved for any reason, project is closed and you pay only the
+[Retainer](/process/cost/retainer)
+for the work done on Specification development.
