iso certificate fixed

--- a/_posts/about/news/year2008/2008-01-28-iso9001.md
+++ b/_posts/about/news/year2008/2008-01-28-iso9001.md
@@ -13,7 +13,10 @@ keywords:
 Naples, FL, January 28, 2008 - On January 28, 2008, TechnoPark Corp. successfully announced their
 ISO 9001:2000 certification.
 
-<png style="border: solid 1px #7d8f9b; float: left; padding: 0px;          margin-right: 15px; margin-top: 15px; margin-bottom: 10px">//images/certificate</png>
+<a href="//img.technoparkcorp.com/news/2008/iso9001-certificate.pdf">
+  <img style="border:solid 1px #7d8f9b; float:left; margin:0 15px 15px 0;width:200px;height:269px;"
+    src="//img.technoparkcorp.com/news/2008/iso9001.png"/>
+</a>
 
 TechnoPark Corp., a custom software development company, specializes in web systems, VoIP
 technologies, enterprise application integration, and data warehousing. Their outsourcing software
