--- a/_posts/about/news/year2008/2008-01-28-iso9001.md
+++ b/_posts/about/news/year2008/2008-01-28-iso9001.md
@@ -15,7 +15,8 @@ ISO 9001:2000 certification.
 
 <a href="//img.technoparkcorp.com/news/2008/iso9001-certificate.pdf">
   <img style="border:solid 1px #7d8f9b; float:left; margin:0 15px 15px 0;width:200px;height:269px;"
-    src="//img.technoparkcorp.com/news/2008/iso9001.png"/>
+    src="//img.technoparkcorp.com/news/2008/iso9001.png"
+    alt="ISO 9001 certificate of TechnoPark Corp."/>
 </a>
 
 TechnoPark Corp., a custom software development company, specializes in web systems, VoIP
