--- a/_posts/about/news/year2012/2012-09-22-s3auth.md
+++ b/_posts/about/news/year2012/2012-09-22-s3auth.md
@@ -16,7 +16,11 @@ keywords:
   - S3 Basic Auth
 ---
 
-<img src="http://img.s3auth.com/logo.png" alt="s3auth.com" style="float:right; margin-left: 2em; margin-bottom: 2em;"/>
+<a href="http://www.s3auth.com">
+  <img src="http://img.s3auth.com/logo.svg"
+    alt="s3auth.com"
+    style="width: 313px; height: 55px; float:right; margin-left: 2em; margin-bottom: 2em;"/>
+</a>
 
 We sponsored a small hosted service for owners of Amazon S3 buckets:
 [s3auth.com](http://www.s3auth.com/). Amazon S3 doesn't provide an ability to deliver private
