--- a/_posts/about/news/year2012/2012-11-16-apn.md
+++ b/_posts/about/news/year2012/2012-11-16-apn.md
@@ -16,8 +16,10 @@ keywords:
 ---
 
 <a href="http://www.tpc2.com">
-            <img src="data:image/png;base64,${base64:/about/news/year2012/aws-logo.png}" alt="APN Standard Technology Partner" style="float:right; margin-left: 2em; margin-bottom: 2em; width: 200px;"/>
-        </a>
+  <img src="//img.technoparkcorp.com/news/2012/aws-logo.png"
+    alt="APN Standard Technology Partner"
+    style="float:right; margin-left: 2em; margin-bottom: 2em; width: 200px;"/>
+</a>
 
 TechnoPark Corp. have been an active user of Amazon Web Services (AWS) for the the last three years.
 In our software solutions we're actively using Elastic Beanstalk, S3, EC2/EBS, CloudFront, and other
