--- a/_posts/about/news/year2011/2011-01-20-taas.md
+++ b/_posts/about/news/year2011/2011-01-20-taas.md
@@ -20,14 +20,17 @@ keywords:
 All details about Team as a Service business model are explained in [tpc2.com](http://www.tpc2.com/) website.
 
 <a href="http://www.tpc2.com">
-        <img src="data:image/png;base64,${base64:/about/news/year2011/taas.png}" alt="Team as a Service logo" style="float:right; margin-left: 2em; margin-bottom: 2em;"/>
-    </a>
+  <img src="//img.technoparkcorp.com/news/2011/taas.png"
+    alt="Team as a Service logo"
+    style="float:right; margin-left: 2em; margin-bottom: 2em;"/>
+</a>
 
 Understanding a fast growing necessity for professional software development in distributed teams
-TechnoPark Corp. launched a new service called "". The concept enables on-demand creation and
+TechnoPark Corp. launched a new service called "Team as a Service". The concept enables on-demand creation and
 management of distributed software development teams, effectively tailored for unique business requirements.
 
 The service will be provided for a few companies in North California. The results of this experiment
 will be published as success stories on our website.
 
-"Team as a Service" trade/service mark is registered by USPTO, reg. no. 85-241,147.
+"Team as a Service" trade/service mark is registered by USPTO,
+<a href="http://tmsearch.uspto.gov/bin/showfield?f=doc&amp;state=4803:gr7hap.2.3">reg. no. 85-241,147</a>.
