--- a/_posts/about/news/year2010/2010-11-03-xdsd.md
+++ b/_posts/about/news/year2010/2010-11-03-xdsd.md
@@ -31,8 +31,7 @@ The XDSD principles are:
  * Everyone gets paid for verified deliverables
  * Defects are planned and don't block delivery
  * Quality-of-code metrics are CI gate conditions
- * VCS commits to
- *  are prohibited
+ * VCS commits to are prohibited
 
 A successful implementation of [XDSD](http://www.xdsd.org) in any particular project requires an
 existence of certain tools, technologies, and skills, which typical project teams rarely, if ever,
@@ -41,6 +40,3 @@ complexity, and will affect almost all aspects of business and social life of it
 
 Email us to get a white paper about [XDSD](http://www.xdsd.org) and its proprietary implementation
 provided by TechnoPark Corp.
-[24-7pressrelease.com](http://www.24
--7pressrelease.com/press-release/is-new-software-development-methodology-a-silver-bullet-183455.php)
-| [free-press-release.com](http://www.free-press-release.com/news-is-new-software-development-methodology-a-silver-bullet-1290629830.html)
