--- a/_posts/about/news/year2010/2010-08-29-pdd.md
+++ b/_posts/about/news/year2010/2010-08-29-pdd.md
@@ -17,8 +17,10 @@ keywords:
   - continuous integration
 ---
 
-Read more on this topic in [php|Architect, August
-2010](http://www.phparch.com/magazine/2010/august/) article "", by Yegor Bugayenko.
+Read more on this topic in
+[php|Architect, August 2010](http://www.phparch.com/magazine/2010/august/)
+article
+["Prevent Conflicts in Distributed Agile PHP Projects"](http://img.rultor.com/guard-article.pdf), by Yegor Bugayenko.
 
 Parallel programming in a distributed team is a tricky and risky process, especially if your project
 wants to be successful and delivered on time. Subversion helps isolate programmers in their
