--- a/_posts/about/news/year2010/2010-08-29-pdd.md
+++ b/_posts/about/news/year2010/2010-08-29-pdd.md
@@ -4,7 +4,7 @@ date: 2010-08-29
 permalink: about/news/year2010/pdd
 tags: news
 label: PDD
-title: "Puzzle Driven Development (pdd) To Help In Distributed Projects"
+title: "Puzzle Driven Development (PDD) To Help In Distributed Projects"
 description: |
   One of the biggest problems in parallel distributed
   programming has been solved with a patent-pending method
