--- a/_posts/innovations/2010-07-21-pdd.md
+++ b/_posts/innovations/2010-07-21-pdd.md
@@ -3,7 +3,7 @@ layout: article
 date: 2010-07-21
 permalink: innovations/pdd
 label: PDD
-title: "Puzzle Driven Development (pdd)"
+title: "Puzzle Driven Development (PDD)"
 intro: "One of the biggest problems in parallel distributed programming has been solved with a patent-pending method called Puzzle Driven Development (PDD)."
 tags: innovations
 description: |
