missed text in metrics

--- a/_posts/innovations/2009-02-03-metrics.md
+++ b/_posts/innovations/2009-02-03-metrics.md
@@ -178,6 +178,36 @@ This process is absolutely transparent for you and the coders. Everything below 
 in the diagram above is not visible to anyone. Coders commit changes to SVN together with unit tests
 and get feedback in form of bonuses. You monitor the values of metrics.
 
-We use our own simple cyclomatic complexity calculator based on
-[Thomas McCabe's](http://www.mccabe.com) principles. Code coverage is calculated by
-[JUnit](http://www.junit.org), [xdebug](http://www.xdebug.org).
+We use our own simple cyclomatic complexity calculator
+based on [Thomas McCabe's](http://www.mccabe.com) principles.
+Code coverage is calculated by
+[JUnit](http://www.junit.org),
+[phpUnit](http://www.phpunit.de)
+(in combination with [xdebug](http://www.xdebug.org)),
+[NUnit](http://www.nunit.org) or
+[CPPUnit](http://cppunit.sourceforge.net).
+
+## What are the pros and cons?
+
+This approach aligns the objectives of you and your coders
+and returns control of quality-of-code to your hands. You get these benefits:
+
+ * Code is always fully covered by unit tests</li>
+ * Code is clear and simple</li>
+ * No more "indispensable" programmers</li>
+ * The more you spend, the better the product</li>
+
+Your programmers also get these benefits:
+
+ * Higher motivation because of a clear numeric objective</li>
+ * More confidence in code stability, less stress</li>
+
+The only disadvantage we experienced after implementation
+of this method was the necessity to spend time explaining this new approach
+to programmers, 2-4 weeks at most.
+
+We may be able to help you with your current projects.
+[Contact us today](/contacts) about how our
+innovative methods of project management can give you a new level
+of control over the success of your business.
+Talk to us to see how we can enable success in your project.
