--- a/_posts/about/2014-08-08-facts.md
+++ b/_posts/about/2014-08-08-facts.md
@@ -70,5 +70,5 @@ Key facts about TechnoPark Corp.:
       </td></tr>
 </table>
 
-<a href='/contacts'>Contact us</a> and we disclose more information: references, pricing, existing success
+[Contact us](/contacts) and we disclose more information: references, pricing, existing success
 clients, etc.
