--- a/_posts/about/jobs/2014-08-08-CEO.md
+++ b/_posts/about/jobs/2014-08-08-CEO.md
@@ -3,7 +3,7 @@ layout: article
 date: 2014-08-08
 permalink: about/jobs/CEO
 label: CEO wanted
-title: "Ceo Wanted"
+title: "CEO Wanted"
 intro: "Talented and experienced CEO wanted for our growing company"
 description: no description
 keywords:
