--- a/_posts/about/news/year2013/2013-07-05-jcabi.md
+++ b/_posts/about/news/year2013/2013-07-05-jcabi.md
@@ -10,12 +10,39 @@ description: |
   help our developers with experiments in distributed
   programming
 keywords:
-  - java
-  - open source
-  - jcabi
+  - java aspects
+  - open source java
+  - jcabi open source projects
+  - popular java open source
+  - jcabi developers
+  - owner of jcabi project
+  - java libraries
+  - popular java libraries
 ---
 
-TechnoPark Corp. started to sponsor a new open source project JCabi.com, which is a collection of
+<a href="http://www.jcabi.com">
+  <img src="http://img.jcabi.com/logo-square.svg"
+    alt="jcabi.com logo"
+    style="width: 64px; height: 64px; float:right; margin-left: 2em; margin-bottom: 2em;"/>
+</a>
+
+TechnoPark Corp. started to sponsor a new open source project
+[jcabi.com](http://www.jcabi.com), which is a collection of
 small Java components and utilities.
 
-The project will also be an experimental zone for our distributed programming technologies.
+The collection includes:
+
+ * [MySQL Maven plugin](http://mysql.jcabi.com)
+ * AWS DynamoDB [object-oriented SDK](http://dynamo.jcabi.com)
+ * AWS S3 object-oriented [adapter](http://s3.jcabi.com)
+ * [Object-oriented wrapper](http://github.jcabi.com) of Github RESTful JSON API
+ * Collection of AOP/AspectJ [aspects](http://aspects.jcabi.com)
+ * [Fluent HTTP client](http://http.jcabi.com) with mocking layer
+ * Fluent [wrapper](http://jdbc.jcabi.com) of JDBC
+ * Hamcrest [matchers](http://matchers.jcabi.com) for XML/XPath
+
+And many others. There are totally over two dozens components
+in the collection, already actively used by Java community.
+
+The project will also be an experimental zone
+for our distributed programming technologies.
