--- a/_posts/about/news/year2008/2008-07-18-poker.md
+++ b/_posts/about/news/year2008/2008-07-18-poker.md
@@ -53,7 +53,7 @@ the payment software on a gaming client's servers. They welcome other gaming com
 about their membership software procedure, as TechnoPark Corp. can help bring profits to struggling
 online websites.
 
-In response to TechnoPark Corp.'s gaming software, a recent client said this, ""The software product
+In response to TechnoPark Corp.'s gaming software, a recent client said this, "The software product
 has over 2 million lines of code and has been in development since 2001. It will be a challenging
 task for their software architects and programmers to change the business model and keep the product
 stable, while continuing to keep the total cost of this migration on budget."
