--- a/_posts/about/news/year2010/2010-05-25-phprack.md
+++ b/_posts/about/news/year2010/2010-05-25-phprack.md
@@ -17,7 +17,8 @@ keywords:
   - continuous integration
 ---
 
-Read more in [php|Architect, June 2010](http://www.phparch.com/magazine/2010/june/) article "", by
+Read more in [php|Architect, June 2010](http://www.phparch.com/magazine/2010/june/)
+article "Integration Testing with phpRack Framework", by
 Yegor Bugayenko.
 
 Unit tests plus continuous integration give you a guarantee that most of your source code defects
@@ -31,7 +32,7 @@ To be short, "Integration Testing" is similar to unit testing, however the testi
 the software itself, but its deployment environment. With integration tests, you're verifying
 whether your product is located in a comfortable place and is ready for end users. Unit tests verify
 your product one-by-one, where integration tests verify you one-by-one. Sound weird? This article
-explains the concept and its implementation in , the open-source framework. framework is written in
+explains the concept and its implementation in phpRack, the open-source framework. phpRack framework is written in
 PHP, but can be used for the integration testing of products written in any other web-oriented
 language, including Java, Python, Ruby, etc.
 
@@ -52,7 +53,7 @@ of possible problems is endless. The bottom line is that this manual approach, a
 is the worst option.
 
 Integration tests are a great alternative. You create small supplementary software modules (called
-"") that are executed on the production server and validate critical environment parameters. For
+"integration tests") that are executed on the production server and validate critical environment parameters. For
 example: version of PHP, availability of PHP extensions, version of MySQL, database access
 permissions, accessibility of network ports, read/write access permissions of log files and
 directories, etc. (Some of my products have 50 or more different integration tests). In addition to
@@ -61,5 +62,5 @@ result in a user-friendly format. Then, you can show this report to the customer
 problems with the server. Once they are fixed, your product works as if it is being installed on
 your local machine. Easy!
 
-simplifies this work, and lets you write integration tests fast and easy. is the first unique
-product of its kind. is a free open-source product.
+phpRack simplifies this work, and lets you write integration tests fast and easy. is the first unique
+product of its kind. phpRack is a free open-source product.
