--- a/_posts/process/quality/2014-08-08-defect.md
+++ b/_posts/process/quality/2014-08-08-defect.md
@@ -20,22 +20,22 @@ Defects are stored in Defect Tracking System. Every customer will have access to
 
 This is an example of properly reported Defect:
 
-<pre>
+{% highlight text %}
+
 Visibility: high
 Repeatability: often
-
 Platform: Windows XP
 Browser:  MS IE 7.0
-Defect:   Being a registered user, I'm trying to
-      change my personal avatar in my account.
-      However, I can not upload TIFF file as
-      avatar. Browser waits for 30 seconds then
-      says that there is no reply from server.
-      The same function works properly in
-      FireFox and Opera.
+Defect: Being a registered user, I'm trying to
+  change my personal avatar in my account.
+  However, I can not upload TIFF file as
+  avatar. Browser waits for 30 seconds then
+  says that there is no reply from server.
+  The same function works properly in
+  FireFox and Opera.
 Reported: by Alex
-Date:     8-Jul
-</pre>
+Date: 8-Jul
+{% endhighlight %}
 
 Properly reported Defects are easy to track, monitor and remove.
 
