--- a/_posts/process/ipr/2014-08-08-law.md
+++ b/_posts/process/ipr/2014-08-08-law.md
@@ -14,18 +14,20 @@ next_step: process/cost
 
 Prior to beginning a project, a software development contract is signed between us stating:
 
-<pre>
+{% highlight text %}
+
 169. Parties shall deem all Deliverables created by
 TPC as "works made for hire" as defined under the
 Copyright Law of the United States of America
 (edition of June 2003)
-</pre>
+{% endhighlight %}
 
 Reference to [Copyright Law of the United States of America](http://www.copyright.gov/title17/)
 means that [Deliverables](/process/warranty/deliverables) created for you by TPC are "Works Made For
 Hire" as defined in the Law:
 
-<pre>
+{% highlight text %}
+
 Copyright Law of the United States, par. 201:
 (b) Works Made for Hire.-In the case of a work made
 for hire, the employer or other person for whom
@@ -34,7 +36,7 @@ purposes of this title, and, unless the parties have
 expressly agreed otherwise in a written instrument
 signed by them, owns all of the rights comprised
 in the copyright.
-</pre>
+{% endhighlight %}
 
 Thus, Deliverables and the Intellectual Propery Rights (IPR) for them are transferred to you when
 the project is closed, plus the Acceptance Statement is signed and the final
