--- a/_posts/about/news/year2002/2002-01-04-oldnews5.md
+++ b/_posts/about/news/year2002/2002-01-04-oldnews5.md
@@ -3,13 +3,18 @@ layout: article
 date: 2002-01-04
 permalink: about/news/year2002/oldnews5
 tags: news
-title: "A Group Of Tpc's Senior Developers Visits Asp.net Conference"
+label: ASP.NET Dev Conf
+title: "A Group Of TPC's Senior Developers Visits Asp.net Conference"
 description: |
   March 25-26, 2002 - TPC's ASP.NET programming team attended
   at the ASP.NET Developer Conference &amp; Expo - Spring
   2002.
 keywords:
-  - software development
+  - asp.net developers
+  - conference asp.net
+  - c# programmers
+  - .net programmers
+  - asp.net programmers
 ---
 
 From TPC's participants, the conference was a great educational event providing the unique
