--- a/_posts/about/news/year2006/2006-08-19-news25.md
+++ b/_posts/about/news/year2006/2006-08-19-news25.md
@@ -3,17 +3,20 @@ layout: article
 date: 2006-08-19
 permalink: about/news/year2006/news25
 tags: news
-title: "Cisp/sdp Cerfitication In September"
+label: CISP/SDP
+title: "CISP/SDP Cerfitication In September"
 description: |
   Payment applications market gets new security standards
   compliant product. Recently released TechnoPark Corp.'s
   mobile payment software will pass Visa/MasterCard CISP/SDP
   Certification in September 2006.
 keywords:
-  - software development
+  - PCI DSS cerfitication
+  - CISP/SDP certified programmers
+  - software developers for PCI DSS
+  - PCI DSS aware programmers
+  - certified PCI DSS programmers
 ---
-
- *
 
 It may seem that too much is said about online payment security; still the problem is a crucial one
 and is being globally ventilated. How to be sure my payment is secure? The question is burning for
