--- a/_posts/about/news/year2014/2014-04-14-teamed.md
+++ b/_posts/about/news/year2014/2014-04-14-teamed.md
@@ -17,7 +17,8 @@ keywords:
   - offshore programming
 ---
 
-TechnoPark Corp. started a new brand called [teamed.io](http://www.teamed.io), which will deliver "Team" as a
+TechnoPark Corp. started a new brand called
+[teamed.io](http://www.teamed.io), which will deliver "Team" as a
 service to project sponsors and team members.
 
 The new brand aggregates all our previous achievments in this area and will help our customers to
