--- a/_posts/about/news/year2014/2014-04-14-teamed.md
+++ b/_posts/about/news/year2014/2014-04-14-teamed.md
@@ -4,7 +4,7 @@ date: 2014-04-14
 permalink: about/news/year2014/teamed
 tags: news
 label: teamed
-title: "Teamed.io Started To Offer "Team" As A Service"
+title: "Teamed.io Started To Offer \"Team As A Service\""
 description: |
   TechnoPark Corp. started a new brand called teamed.io for providing
   "Team" as a Service
