--- a/_posts/about/news/year2014/2014-08-19-rultor.md
+++ b/_posts/about/news/year2014/2014-08-19-rultor.md
@@ -17,6 +17,9 @@ keywords:
   - continuous integration
 ---
 
+<img src="http://img.rultor.com/logo.svg"
+  style="float:right;width:96px;height:96px;margin-left:1em;"/>
+
 [Rultor.com](http://www.rultor.com), a new cloud service for DevOps automation,
 was recently launched by TechnoPark Corp. It is unique in that it is the only
 service that interactively enables the smooth integration of programming
