--- a/_posts/about/news/year2014/2014-08-19-rultor.md
+++ b/_posts/about/news/year2014/2014-08-19-rultor.md
@@ -17,7 +17,7 @@ keywords:
   - continuous integration
 ---
 
-<img src="http://img.rultor.com/logo.svg"
+<img src="http://doc.rultor.com/images/logo.svg"
   style="float:right;width:96px;height:96px;margin-left:1em;"/>
 
 [Rultor.com](http://www.rultor.com), a new cloud service for DevOps automation,
